--- a/front/Cebb Dashbord/Dockerfile
+++ b/front/Cebb Dashbord/Dockerfile
@@ -4,12 +4,12 @@ FROM node:18 AS build
 WORKDIR /app
 
 COPY package.json package-lock.json ./
-
-RUN npm cache clean --force
-
 RUN npm install --legacy-peer-deps
 
-COPY . .
+# Copy the src and public folders
+COPY src ./src
+COPY public ./public
 
 EXPOSE 3000
+
 CMD ["npm", "start"]
