--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,7 @@ services:
   
 
   frontend:
-    build:
-      context: ./front/Cebb Dashbord
-      dockerfile: Dockerfile
+    image: zoghlami19/devops-frontend:latest
     ports:
       - 3000:3000
     volumes:
