--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'  # Specify the version of the Compose file format
 services:
   
   node:
-    images: zoghlami19/devops-node
+    image: zoghlami19/devops-node
     build: backend
     ports:
       - 5000:5000
