--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
+    "test": "jest --runInBand --detectOpenHandles --forceExit"
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
